DFI-69 fix missing urn bug
- also fixed possible file handle leak
- added command to update a single record
- fixed element sorting